--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -4,6 +4,15 @@
 
 {% block body %}
 
+    <br>
+    <div class="row">
+        <div class="col-sm-3">
+            <a href="{{ path('add_post')}}" class="btn btn-primary">Добавить пост</a>
+        </div>
+
+    </div>
+    <br>
+
     <div class="row">
         {% for viewPost in viewPosts %}
             <div class="col-sm-3">
